# haskell-katas

./: .gitignore  Makefile  README.md  TAGS  default.nix  katas.cabal  katas.nix  project.nix  shell.nix
src/: Main.hs
src/Katas/: AdditionAssoc.hs  AdditionCommutes.hs  AlgebraicISO.hs  ApplicativeParser.hs  BalancedParens.hs  Befunge93.hs  Calculator.hs  Church.hs  ChurchBooleans.hs  ChurchNums.hs  Coroutine.hs  EvalMathExpr.hs  Fibonacci.hs  FixIt.hs  ISO.hs  Imperative.hs  IsThatALine.hs  Parsable.hs  PolyvariadicFunctions.hs  RecurrenceRelations.hs  SKICombinators.hs  ScottEncoding.hs  ShortestList.hs  SimpleAssembler.hs  SimpleLens.hs  SimpleSQLEngine.hs  Singletons.hs  Smallfuck.hs  Snail.hs  SymbolicDiff.hs  Tagless.hs  TimesComm.hs  TreeByLevels.hs  TypeTranspiler.hs  WordBreak.hs
