name: katas
version: 1.0.0
license: BSD3
cabal-version: >= 1.18
build-type: Simple

executable katas
    build-depends: base < 5, random, mtl, containers, lens
    other-modules:       Katas.AlgebraicISO
                       , Katas.BalancedParens
                       , Katas.Befunge93
                       , Katas.Church
                       , Katas.Fibonacci
                       , Katas.ISO
                       , Katas.Imperative
                       , Katas.IsThatALine
                       , Katas.SimpleAssembler
                       , Katas.SimpleLens
                       , Katas.Smallfuck
                       , Katas.Snail
                       , Katas.TreeByLevels
                       , Katas.TypeTranspiler
                       , Katas.ApplicativeParser
                       , Katas.WordBreak
                       , Katas.PolyvariadicFunctions
                       , Katas.AdditionCommutes
                       , Katas.FixIt
                       , Katas.AdditionAssoc
                       , Katas.TimesComm
                       , Katas.SymbolicDiff
                       , Katas.Coroutine
                       , Katas.ChurchBooleans
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
